--- a/src/css/list.css
+++ b/src/css/list.css
@@ -1,6 +1,3 @@
-h2 {
-  font-family:sans-serif;
-}
 .list {
   font-family:sans-serif;
   margin:0;
@@ -8,79 +5,36 @@ h2 {
 }
 .list > li {
   display:block;
-  background-color: #eee;
+  background-color: rgba(0,0,0,0);
   padding:10px;
-  box-shadow: inset 0 1px 0 #fff;
+  border-bottom: solid rgba(255, 255, 255, 0.2) 3px;
+  color: #FFFFFF;
 }
-.avatar {
-  max-width: 150px;
+
+.white-background li{
+  background-color: #3a507f;
 }
-img {
-  max-width: 100%;
-}
-h3 {
-  font-size: 16px;
-  margin:0 0 0.3rem;
-  font-weight: normal;
-  font-weight:bold;
-}
-p {
-  margin:0;
+
+.list h3{
+  font-size: 1em;
+  font-weight: bold;
+  margin-bottom: 5px; 
+  margin-top: 0px;
+} 
+
+.list p{
+  margin-bottom: 0.1em;
 }
 
 p.date{
-  font-size: 10px;
+  position: relative;
+  top: 6px;
+  font-size: 0.6em;
   width:100%;
   text-align: right;
+  opacity: 0.8;
 }
 
-.sort {
-  padding:8px 30px;
-  border-radius: 6px;
-  border:none;
-  display:inline-block;
-  color:#fff;
-  text-decoration: none;
-  background-color: #28a8e0;
-  height:30px;
-}
-.sort:hover {
-  text-decoration: none;
-  background-color:#1b8aba;
-}
-.sort:focus {
-  outline:none;
-}
-.sort:after {
-  width: 0;
-  height: 0;
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-  border-bottom: 5px solid transparent;
-  content:"";
-  position: relative;
-  top:-10px;
-  right:-5px;
-}
-.sort.asc:after {
-  width: 0;
-  height: 0;
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-  border-top: 5px solid #fff;
-  content:"";
-  position: relative;
-  top:13px;
-  right:-5px;
-}
-.sort.desc:after {
-  width: 0;
-  height: 0;
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-  border-bottom: 5px solid #fff;
-  content:"";
-  position: relative;
-  top:-10px;
-  right:-5px;
+p.message{
+  font-size: 0.8em;
 }
