--- a/src/css/map.css
+++ b/src/css/map.css
@@ -5,34 +5,48 @@ html, body {
   font-family: 'Roboto',sans-serif;
   position: relative;
   text-rendering: optimizeLegibility;
+  overflow:hidden;
 }
 .clickable-item:hover{
-  background-color: #AAAAAA;
+  background-color: #3a507f !important;
   cursor: pointer; 
 }
 .clickable-item{
-  background-color: #DDDDDD;
+  background-color: #284582 !important;
 }
 #map {
   float:left;
   top:0px;
   height: 100%; 
-  width: 80%;
+  width: 100%;
 }
 #panel{
-  float:right;
-  width:20%;
+  width:100%;
   overflow-y: scroll;
   height:100%;
+  margin-right: 100px;
+  color: #FFFFFF;
 }
 #messages-title{
-  background-color: #EEEEEE;
   padding: 10px 0px;
-  vertical-align: center;
-  border-top: solid #FFFFFF 2px;
+  border-top: solid #b5b5b5 1px;
+  border-bottom: solid #b5b5b5 1px;
 }
 #route-description{
   padding-left: 1em;
+}
+
+#route{
+    color: #f5f5f5;
+    padding: 1em 0em;
+}
+
+#route h3{
+  margin-top: 0px;
+}
+#routes{
+  width: 100%;
+  height: 100%;
 }
 .center-text{
   text-align: center;
@@ -41,12 +55,16 @@ html, body {
   display: none !important;
 }
 .scrollable-y{
-  overflow-y: scroll; 
+  overflow-y: scroll !important; 
 }
 .modal-body{
   height: 80%;
+  padding-bottom: 10px; 
 }
-
+.modal-title{
+  color: #3a507f;
+  font-weight: bold;
+}
 /* scroll bar*/
 *::-webkit-scrollbar {
     width: 6px!important;
@@ -54,7 +72,7 @@ html, body {
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: rgba(0,0,0,.2);
+    background-color: rgb(67, 115, 216);
 }
 
 *::-webkit-scrollbar-track {
